<resources>
    <string name="app_name">Mobile Survey</string>

    <string name="restaurant">Restaurant</string>
    <string name="retail">Retail</string>
    <string name="amusement">Amusement Park</string>

    <string-array name="survey_type">
        <item>@string/restaurant</item>
        <item>@string/retail</item>
        <item>@string/amusement</item>
    </string-array>

    <string name="restaurant_name">Select restaurant name</string>
    <string name="retail_name">Select retail store name</string>
    <string name="amusement_name">Select amusement park name</string>

    <string name="Name">Name</string>
    <string name="Create">Create</string>
    <string name="Login">Login</string>
    <string name="Scan">Scan QR Code</string>

    <string name="Bad">Bad</string>
    <string name="Mediocre">Mediocre</string>
    <string name="Okay">Okay</string>
    <string name="Good">Good</string>
    <string name="Amazing">Amazing</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="Not_Difficult">Not Difficult</string>
    <string name="Somewhat">Somewhat Difficult</string>
    <string name="Difficult">Difficult</string>

    <string name="retail_one">1) How difficult was it to find what you were looking for?</string>
    <string name="retail_two">2) How would you rate the quality of the service?</string>
    <string name="retail_three">3) How would you rate the cleanliness of the store?</string>
    <string name="retail_four">4) How would you rate the atmosphere of the store?</string>
    <string name="retail_five">5) Would you recommend this store to friends and family?</string>
    <string name="retail_six">6) If no, why not?"</string>

    <string name="restaurant_one">1) How would you rate the quality of the food?</string>
    <string name="restaurant_two">2) How would you rate the quality of the service?</string>
    <string name="restaurant_three">3) How would you rate the cleanliness of the restaurant?</string>
    <string name="restaurant_four">4) How would you rate the atmosphere of the restaurant?</string>
    <string name="restaurant_five">5) Would you recommend this restaurant to friends and family?</string>
    <string name="restaurant_six">6) If no, why not?</string>

    <string name="amusement_one">1) How would you rate the quality of the attractions?</string>
    <string name="amusement_two">2) How would you rate the quality of the staff?</string>
    <string name="amusement_three">3) How would you rate the cleanliness of the park?</string>
    <string name="amusement_four">4) Did you find the park worth the price of admission?</string>
    <string name="amusement_five">5) Would you want to come back for another visit?</string>
    <string name="amusement_six">6) Why, or why not?</string>

    <string name="comments">Additional Comments</string>
    <string name="submit">Submit</string>
</resources>
