<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name" />

        <Spinner
            android:id="@+id/restaurant_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_one" />

        <RadioGroup
            android:id="@+id/one_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/one_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Bad" />

            <RadioButton
                android:id="@+id/one_mediocre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mediocre" />

            <RadioButton
                android:id="@+id/one_okay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Okay" />

            <RadioButton
                android:id="@+id/one_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Good" />

            <RadioButton
                android:id="@+id/one_amazing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Amazing" />
        </RadioGroup>

        <TextView
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_two" />

        <RadioGroup
            android:id="@+id/two_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/two_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Bad" />

            <RadioButton
                android:id="@+id/two_mediocre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mediocre" />

            <RadioButton
                android:id="@+id/two_okay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Okay" />

            <RadioButton
                android:id="@+id/two_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Good" />

            <RadioButton
                android:id="@+id/two_amazing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Amazing" />
        </RadioGroup>

        <TextView
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_three" />

        <RadioGroup
            android:id="@+id/three_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/three_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Bad" />

            <RadioButton
                android:id="@+id/three_mediocre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mediocre" />

            <RadioButton
                android:id="@+id/three_okay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Okay" />

            <RadioButton
                android:id="@+id/three_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Good" />

            <RadioButton
                android:id="@+id/three_amazing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Amazing" />
        </RadioGroup>

        <TextView
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_four" />

        <RadioGroup
            android:id="@+id/four_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/four_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Bad" />

            <RadioButton
                android:id="@+id/four_mediocre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mediocre" />

            <RadioButton
                android:id="@+id/four_okay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Okay" />

            <RadioButton
                android:id="@+id/four_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Good" />

            <RadioButton
                android:id="@+id/four_amazing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Amazing" />
        </RadioGroup>

        <TextView
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_five" />

        <RadioGroup
            android:id="@+id/five_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/five_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Yes" />

            <RadioButton
                android:id="@+id/five_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/No" />
        </RadioGroup>

        <TextView
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_six" />

        <EditText
            android:id="@+id/six_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/seven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments" />

        <EditText
            android:id="@+id/seven_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />


    </LinearLayout>
</ScrollView>
